[package]
name = "bevy_terrain"
version = "0.2.0"
authors = ["clynamen <clynamen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.5"
bevy = "0.5.0"
bevy_render = "0.5.0"
bevy_fly_camera = "0.7.0"
image = "0.23.12"
anyhow = "1.0.37"
bitintr = "0.3.0"
nalgebra = "0.24.0"